src/test/deca/syntax/valid/decla_methode.deca
// Description:
//    on déclare une méthode au sein d'une classe
//
// Resultats:
//   ok

class A {
	void M ( ) {
	}
}