src/test/deca/syntax/invalid/classe_sans_crochet_1.deca
// Description:
//    on déclare une classe sans le crochet ouvrant
//
// Resultats:
//   

class A {